es-k8s/kibana.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    elastic-app: kibana
  name: kibana
  namespace: lrd-bigdata
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      elastic-app: kibana
  template:
    metadata:
      labels:
        elastic-app: kibana
    spec:
      nodeSelector:
        lrd-node-type: bigdata
      containers:
        - name: kibana
          image: kibana:6.4.3
          ports:
            - containerPort: 5601
              protocol: TCP
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule

---
kind: Service
apiVersion: v1
metadata:
  labels:
    elastic-app: kibana
  name: kibana-service
  namespace: lrd-bigdata
spec:
  ports:
    - port: 5601
      targetPort: 5601
  selector:
    elastic-app: kibana
  type: NodePort
