es-k8s/elasticsearch-master.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: elasticsearch
    role: master
  name: elasticsearch-master
  namespace: lrd-bigdata
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: elasticsearch
      role: master
  template:
    metadata:
      labels:
        app: elasticsearch
        role: master
    spec:
      nodeSelector:
        lrd-node-type: bigdata
      serviceAccountName: elasticsearch-admin
      containers:
        - name: elasticsearch-master
          image: elasticsearch:6.4.3
          command: ["bash", "-c", "ulimit -l unlimited && sysctl -w vm.max_map_count=262144 && exec su elasticsearch docker-entrypoint.sh"]
          ports:
            - containerPort: 9200
              protocol: TCP
            - containerPort: 9300
              protocol: TCP
          securityContext:
            privileged: true
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch-discovery
  namespace: lrd-bigdata
spec:
  ports:
    - port: 9300
      targetPort: 9300
  selector:
    app: elasticsearch
    role: master
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-data-service
  namespace: lrd-bigdata
  labels:
    app: elasticsearch
    role: data
spec:
  ports:
    - port: 9200
      name: outer
    - port: 9300
      name: inner
  clusterIP: None
  selector:
    app: elasticsearch
    role: data
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  labels:
    app: elasticsearch
    role: data
  name: elasticsearch-data
  namespace: lrd-bigdata
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: elasticsearch
  serviceName: elasticsearch-data-service
  template:
    metadata:
      labels:
        app: elasticsearch
        role: data
    spec:
      nodeSelector:
        lrd-node-type: bigdata
      serviceAccountName: elasticsearch-admin
      containers:
        - name: elasticsearch-data
          image: elasticsearch:6.4.3
          command: ["bash", "-c", "ulimit -l unlimited && sysctl -w vm.max_map_count=262144 && chown -R elasticsearch:elasticsearch /usr/share/elasticsearch/data && exec su elasticsearch docker-entrypoint.sh"]
          ports:
            - containerPort: 9200
              protocol: TCP
            - containerPort: 9300
              protocol: TCP
          volumeMounts:
            - name: elasticsearch-data-volume
              mountPath: /usr/share/elasticsearch/data
          securityContext:
            privileged: true
      securityContext:
        fsGroup: 1000
  volumeClaimTemplates:
    - metadata:
        name: elasticsearch-data-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 50Gi
        storageClassName: es-data-node



#       volumes:
#         - name: elasticsearch-data-volume
#           emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch-service
  namespace: lrd-bigdata
spec:
  ports:
    - port: 9200
      targetPort: 9200
  selector:
    app: elasticsearch
  type: NodePort














  //暂时不用下边
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch-ingress
  namespace: lrd-bigdata
spec:
  rules:
    - host: 192.168.188.81
      http:
        paths:
          - backend:
              serviceName: elasticsearch-service
              servicePort: 9200
